fixed sidebar alignment

--- a/src/components/RoomList.css
+++ b/src/components/RoomList.css
@@ -1,8 +1,11 @@
-#create-room-form {
+.room-list {
     display: block;
     -webkit-flex-shrink: 0;
     -ms-flex-negative: 0;
     flex-shrink: 0;
-    padding: 1px 40px;
+    padding: 1px 30px;
     margin: 0;
+    
 }
+
+   
